[package]
name = "app"
version = "0.3.0"
description = "DeepL client"
authors = ["Yusuke Nakamura"]
license = "Apache-2.0"
repository = "https://github.com/unasuke/deplore"
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.0" }

[dependencies]
directories = "4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
